--- a/03-paisesApp/src/app/pais/pages/ver-paisn/ver-paisn.component.html
+++ b/03-paisesApp/src/app/pais/pages/ver-paisn/ver-paisn.component.html
@@ -1,1 +1,34 @@
-<p>ver-paisn works!</p>
+<div *ngIf="!pais; else divPais" class="alert alert-info">
+  Espere por favor...
+</div>
+
+<ng-template #divPais>
+  <div class="row">
+    <div class="col-12">
+      <h1>
+        Pais: <small>{{ pais.name }}</small>
+      </h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-4">
+      <h3>Bandera</h3>
+      <img [src]="pais.flag" class="img-thumbnail" />
+    </div>
+    <div class="col">
+      <h3>Información</h3>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <strong>Población</strong> {{ pais.population }}
+        </li>
+        <li class="list-group-item">
+          <strong>Código númerico</strong> {{ pais.numericCode }}
+        </li>
+        <li class="list-group-item">
+          <strong>Código alpha3</strong> {{ pais.alpha3Code }}
+        </li>
+      </ul>
+    </div>
+  </div>
+</ng-template>
