--- a/03-paisesApp/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/03-paisesApp/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,13 +1,15 @@
-<h2>Por capital</h2>
-<hr />
+<div class="animate__animated animate__fadeIn">
+  <h2>Por capital</h2>
+  <hr />
 
-<div class="row">
-  <div class="col">
-    <app-pais-input
-      (onEnter)="buscar($event)"
-      (onDebounce)="sugerencias($event)"
-      placeholder="Buscar capital..."
-    ></app-pais-input>
+  <div class="row">
+    <div class="col">
+      <app-pais-input
+        (onEnter)="buscar($event)"
+        (onDebounce)="sugerencias($event)"
+        placeholder="Buscar capital..."
+      ></app-pais-input>
+    </div>
   </div>
 </div>
 
