--- a/03-paisesApp/src/app/pais/pages/por-region/por-region.component.html
+++ b/03-paisesApp/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,29 @@
-<p>por-region works!</p>
+<h3>
+  Buscar por región <small>{{ regionActiva | titlecase }}</small>
+</h3>
+
+<hr />
+
+<h5>Selecciones la región</h5>
+
+<div class="row">
+  <div class="col">
+    <button
+      *ngFor="let region of regiones"
+      class="btn btn-outline-primary mr-1"
+      (click)="activarRegion(region)"
+      [ngClass]="{
+        'btn-primary': regionActiva === region,
+        'btn-outline-primary': regionActiva !== region
+      }"
+    >
+      {{ region }}
+    </button>
+  </div>
+</div>
+
+<div class="row">
+    <div class="col">
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+  </div>
