--- a/03-paisesApp/src/app/pais/pages/ver-paisn/ver-paisn.component.html
+++ b/03-paisesApp/src/app/pais/pages/ver-paisn/ver-paisn.component.html
@@ -31,4 +31,16 @@
       </ul>
     </div>
   </div>
+
+  <h3>Traducciones</h3>
+  <div class="row">
+    <div class="col">
+      <span class="badge bg-primary mr-1">{{ pais.translations.de }}</span>
+      <span class="badge bg-primary mr-1">{{ pais.translations.es }}</span>
+      <span class="badge bg-primary mr-1">{{ pais.translations.fr }}</span>
+      <span class="badge bg-primary mr-1">{{ pais.translations.ja }}</span>
+      <span class="badge bg-primary mr-1">{{ pais.translations.it }}</span>
+      <span class="badge bg-primary mr-1">{{ pais.translations.fa }}</span>
+    </div>
+  </div>
 </ng-template>
